# adventofcode

./: .gitignore  README.md  go.mod
adventofcode_2020_go/: go.mod  main.go
adventofcode_2020_go/inputs/: inputs.go
adventofcode_2020_go/internal/: internal.go  model.go
adventofcode_2021_go/: main.go
base_go/inputs/: inputs.go
c/: CMakeLists.txt
c/src/: defines.h  main.c
c/src/aoc_2022/: aoc_2022.h  day_01.c  day_02.c  day_03.c  day_04.c
dotnet/: AdventOfCode.sln
dotnet/AdventOfCode.2021/: AdventOfCode.2021.csproj  Day01.cs  Program.cs  README.md
dotnet/AdventOfCode.2021.Tests/: AdventOfCode.2021.Tests.csproj  Day01Tests.cs  Day02Tests.cs
dotnet/AdventOfCode.Base/: AdventOfCode.Base.csproj  IDay.cs  Inputs.cs  Runner.cs  Vec2.cs  Vec2OfT.cs
go/: go.mod  go.sum
go/aoc_2020/: main.go
go/aoc_2021/: main.go
go/aoc_2022/: main.go
go/aoc_2023/: main.go
go/cmd/: main.go
go/ui/: mainmenu.go  program.go
javascript/: .eslintrc  .gitignore  package-lock.json  package.json
javascript/src/: benches.mjs  index.mjs  runner.mjs
rust/: Cargo.toml  makefile
rust/aoc_2015/: Cargo.toml
rust/aoc_2015/benches/: aoc_2015_rs_benchmark.rs
rust/aoc_2015/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  main.rs
rust/aoc_2016/: Cargo.toml
rust/aoc_2020/: Cargo.toml  README.md
rust/aoc_2021/: Cargo.toml  makefile
rust/aoc_2021/benches/: aoc_2021_rs_benchmark.rs
rust/aoc_2021/src/: day_01.rs  day_02.rs  day_03.rs  lib.rs  main.rs  runner.rs
rust/aoc_2021/src/inputs/: mod.rs
rust/aoc_base/: Cargo.toml
ziglang/: build.zig  build.zig.zon
(+219 files in other folders)
