[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_base.workspace = true
anyhow.workspace = true
rust-crypto = "0.2.36"

[profile.dev]
opt-level = 3

[dev-dependencies]
criterion.workspace = true
paste = "1.0.15"

[[bench]]
name = "aoc_2015_rs_benchmark"
harness = false
